--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "chalk": "^4.0.0",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "underscore": "^1.10.2"
   }
 }
